--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                     <div class="card-body">
                         <h2 class="card-title text-center mb-4">Group Signature Generator</h2>
                         
+                        <!-- Repository URL Input -->
+                        <div class="mb-4">
+                            <label for="repoUrl" class="form-label">Repository URL</label>
+                            <input type="text" class="form-control" id="repoUrl" placeholder="https://github.com/owner/repo">
+                        </div>
+
                         <!-- Message Input -->
                         <div class="mb-4">
                             <label for="message" class="form-label">Message</label>
@@ -30,6 +36,14 @@
                         <!-- Generate Proof Button -->
                         <div class="text-center mb-4">
                             <button class="btn btn-primary" id="generateProof">Generate Proof</button>
+                        </div>
+
+                        <!-- Loading Spinner -->
+                        <div id="loadingSpinner" class="text-center mb-4" style="display: none;">
+                            <div class="spinner-border text-primary" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <p class="mt-2">Fetching repository data...</p>
                         </div>
 
                         <!-- Expandable Sections -->
