--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 
                         <!-- Expandable Sections -->
                         <div id="expandableSections" style="display: none;">
+                            <div class="section">
+                                <h3>Repository Contributors and Public Keys</h3>
+                                <div id="contributorsContent" class="contributors-grid"></div>
+                            </div>
                             <!-- Contributors Section -->
                             <div class="accordion mb-3">
                                 <div class="accordion-item">
