--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group Signature Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script type="importmap">
         {
           "imports": {
             "poseidon-lite/poseidon2":
-                "https://cdn.jsdelivr.net/npm/poseidon-lite@0.3.0/+esm"
+                "https://cdn.jsdelivr.net/npm/poseidon-lite@0.3.0/+esm",
+            "snarkjs": "https://cdn.jsdelivr.net/npm/snarkjs@0.7.5/+esm"
           }
         }
     </script>
@@ -36,44 +37,10 @@
                             <textarea class="form-control" id="message" rows="3" placeholder="Enter your message here..."></textarea>
                         </div>
 
-                        <!-- Message Display -->
-                        <div class="mb-4" id="messageDisplaySection" style="display: none;">
-                            <h5>Message Details</h5>
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="mb-3">
-                                        <h6>Raw Message</h6>
-                                        <pre class="bg-light p-2 rounded" id="rawMessage"></pre>
-                                    </div>
-                                    <div class="mb-3">
-                                        <h6>Message as BigInt</h6>
-                                        <pre class="bg-light p-2 rounded" id="messageBigInt"></pre>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                         <!-- Signature Input -->
                         <div class="mb-4">
                             <label for="signature" class="form-label">Signature</label>
                             <textarea class="form-control" id="signature" rows="3" placeholder="Enter your signature here..."></textarea>
-                        </div>
-
-                        <!-- Parsed Signature Details -->
-                        <div class="mb-4" id="parsedSignatureSection" style="display: none;">
-                            <h5>Parsed Signature Details</h5>
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="mb-3">
-                                        <h6>Public Key</h6>
-                                        <pre class="bg-light p-2 rounded" id="parsedPublicKey"></pre>
-                                    </div>
-                                    <div class="mb-3">
-                                        <h6>Signature</h6>
-                                        <pre class="bg-light p-2 rounded" id="parsedSignature"></pre>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- Generate Proof Button -->
@@ -87,15 +54,11 @@
                             <div class="spinner-border text-primary" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
-                            <p class="mt-2">Fetching repository data...</p>
+                            <p class="mt-2">Verifying Signature</p>
                         </div>
 
                         <!-- Expandable Sections -->
                         <div id="expandableSections" style="display: none;">
-                            <div class="section">
-                                <h3>Repository Contributors and Public Keys</h3>
-                                <div id="contributorsContent" class="contributors-grid"></div>
-                            </div>
                             <!-- Contributors Section -->
                             <div class="accordion mb-3">
                                 <div class="accordion-item">
@@ -105,8 +68,10 @@
                                         </button>
                                     </h2>
                                     <div id="contributorsCollapse" class="accordion-collapse collapse">
-                                        <div class="accordion-body" id="contributorsContent">
-                                            <!-- Content will be populated by JavaScript -->
+                                        <div class="accordion-body">
+                                            <div id="contributorsContent" class="contributors-grid">
+                                                <!-- Content will be populated by JavaScript -->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -137,9 +102,8 @@
     <!-- Load dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/poseidon-lite@0.3.0/dist/poseidon-lite.min.js"></script>
-    <script src="helper.js"></script>
-    <script src="temporary_rsakey_parser.js"></script>
-    <script type="module" src="merkle.js"></script>
-    <script src="script.js"></script>
+    <script src="helper_scripts/temporary_rsakey_parser.js"></script>
+    <script type="module" src="helper_scripts/merkle.js"></script>
+    <script type="module" src="helper_scripts/script.js"></script>
 </body>
 </html> 
