Halfway through in integrating ED25519, most of the backend and circuit is done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                         <textarea class="form-control" id="signature" rows="3" placeholder="Enter your signature here..."></textarea>
                     </div>
 
+                    <!-- R Input Field (Only visible in Verify Mode) -->
+                    <div class="mb-4" id="rInputContainer" style="display: none;">
+                        <label for="rInput" class="form-label">R Value</label>
+                        <textarea class="form-control" id="rInput" rows="3" placeholder="Enter the R value here..."></textarea>
+                    </div>
+
                     <!-- Action Button -->
                     <div class="text-center mb-4">
                         <button class="btn btn-primary me-2" id="actionButton">Generate Proof</button>
