--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
           "imports": {
             "poseidon-lite/poseidon2":
                 "https://cdn.jsdelivr.net/npm/poseidon-lite@0.3.0/+esm",
-            "snarkjs": "https://cdn.jsdelivr.net/npm/snarkjs@0.7.5/+esm"
+            "snarkjs": "https://cdn.jsdelivr.net/npm/snarkjs@0.7.5/+esm",
+            "buffer":
+            "https://cdn.jsdelivr.net/npm/buffer@6.0.3/+esm",
+            "crypto":
+            "https://cdn.jsdelivr.net/npm/@jspm/core@2/nodelibs/browser/crypto.js"
           }
         }
     </script>
@@ -101,6 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/poseidon-lite@0.3.0/dist/poseidon-lite.min.js"></script>
     <script src="helper_scripts/temporary_rsakey_parser.js"></script>
+    <script type="module" src="helper_scripts/ed25519_signature_parser_final.js"></script>
     <script type="module" src="helper_scripts/merkle.js"></script>
     <script type="module" src="helper_scripts/key_processor.js"></script>
     <script type="module" src="helper_scripts/script.js"></script>
