Ecdsa Submodule added, circuit bug fixed

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                     <div id="resultMessage" class="alert alert-success text-center mb-4" style="display: none;">
                     </div>
 
+                    <!-- R Output Box (Only visible in Generate Mode) -->
+                    <div class="mb-4" id="rOutputContainer" style="display: none;">
+                        <label for="rOutput" class="form-label">Generated R Value</label>
+                        <textarea class="form-control" id="rOutput" rows="3" readonly></textarea>
+                    </div>
+
                     <!-- Expandable Sections -->
                     <div id="expandableSections" style="display: none;">
                         <!-- Contributors Section -->
